move into new view and replace curve 256r1 with 256k1